--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Montserrat:wght@300;500&family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link href="http://fonts.cdnfonts.com/css/circular-std" rel="stylesheet">
+                
     <!-- <link rel="stylesheet" href="res/css/generalcss.css" >  -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
